--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 
     <footer class="footer">
         <ul class="footer__link-box">
-            <li><a href="https://yandex.com/maps" class="footer__link">Maps</a></li>
-            <li><a href="https://yandex.com/weather/moscow" class="footer__link">Weather</a></li>
-            <li><a href="https://www.any.do/" class="footer__link">Calendar</a></li>
+            <li class="footer__link-element"><a href="https://yandex.com/maps" class="footer__link">Maps</a></li>
+            <li class="footer__link-element"><a href="https://yandex.com/weather/moscow" class="footer__link">Weather</a></li>
+            <li class="footer__link-element"><a href="https://www.any.do/" class="footer__link">Calendar</a></li>
         </ul>
         <p class="footer__copyright">&#169; 2020, Jan</p>
     </footer>
